# pyrustmpi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  environment.yaml  example.py  hello.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yaml  test.yaml
conda.recipe/: conda_build_config.yaml  meta.yaml
pyrustmpi/: __init__.py
pyrustmpi/pyrustmpi/: ffi.py
python/: setup.py
python/conda.recipe/: meta.yaml
python/pyrustmpi/: __init__.py
src/: lib.rs
