[package]
name = "pyrustmpi"
version = "0.1.0"
edition = "2018"

[lib]
name = "pyrustmpi"
crate-type = ["dylib"]


[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi", branch = "main"}
memoffset = "0.6"
rand = "0.8.4"
hyksort = {git = "https://github.com/skailasa/hyksort", branch = "main"}